Add notifications to Ironic
This adds the notification base classes, documentation, and a few power state
notifications to Ironic.

Closes-Bug: 1526408

Change-Id: Ib1b1fa819e8ff0b93afacd0b3de6e6762168e230

--- a/etc/ironic/ironic.conf.sample
+++ b/etc/ironic/ironic.conf.sample
@@ -114,6 +114,16 @@
 
 
 #
+# Options defined in ironic.common.rpc
+#
+
+# Specifies the minimum priority for which to send
+# notifications. A value of "None" indicates that no
+# notifications will be sent. (string value)
+#notification_priority=<None>
+
+
+#
 # Options defined in ironic.common.service
 #
 
